--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/KioskoInformaticoWeb.csproj
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/KioskoInformaticoWeb.csproj
@@ -7,12 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Productos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\KioskoInformaticoService\KioskoInformaticoServices.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Productos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Productos.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Productos.razor" />
   </ItemGroup>
 
 </Project>
