--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/KioskoInformaticoWeb.csproj
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/KioskoInformaticoWeb.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Pages\Productos.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.7" PrivateAssets="all" />
   </ItemGroup>
@@ -20,15 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Productos.razor" />
+    <Content Update="Pages\Productos\Productos.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <_ContentIncludedByDefault Remove="Pages\Productos.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Pages\Productos.razor" />
+    <Folder Include="Pages\Clientes\" />
   </ItemGroup>
 
 </Project>
