Añadidas nuevas vistas y lógica para productos y clientes
Se han realizado los siguientes cambios:
- Añadidas referencias de compilación para `Productos.xaml` y `Productos.xaml.cs` en `KioscoInformaticoApp.csproj`.
- Configuración para excluir `Cliente.razor` de la publicación de un solo archivo en `KioskoInformaticoWeb.csproj`.
- Eliminada carpeta vacía `Pages\Clientes\` en `KioskoInformaticoWeb.csproj`.
- Inyección de `SweetAlertService` y método `Eliminar` en `Productos.razor`.
- Creada clase `ProductosViewModel` en `ProductosViewModel.cs` para la lógica de la vista de productos.
- Añadidos archivos `Productos.xaml` y `Productos.xaml.cs` para la interfaz y lógica de la vista de productos.
- Añadida página `Cliente.razor` para gestionar clientes.
- Añadida página `EditarLocalidad.razor` para editar localidades.

--- a/KioskoInformaticoApp/KioscoInformaticoApp/KioscoInformaticoApp.csproj
+++ b/KioskoInformaticoApp/KioscoInformaticoApp/KioscoInformaticoApp.csproj
@@ -76,7 +76,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\Productos.xaml.cs">
+	    <DependentUpon>Productos.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Views\IniciarSesionView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Productos.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
