--- a/KioskoInformaticoDesktop/App.config
+++ b/KioskoInformaticoDesktop/App.config
@@ -2,10 +2,16 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="KioscoInformaticoDesktop.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="KioskoInformaticoService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <KioscoInformaticoDesktop.Properties.Settings>
+            <setting name="UrlApi" serializeAs="String">
+                <value>https://datakioscoluu.azurewebsites.net/api/</value>
+            </setting>
+        </KioscoInformaticoDesktop.Properties.Settings>
         <KioskoInformaticoService.Properties.Settings>
             <setting name="UrlApi" serializeAs="String">
                 <value>https://datakioscosofi.azurewebsites.net/api/</value>
